--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,8 @@
 {
-    "name": "mileschou/composer-template",
-    "description": "The template for create Composer project",
+    "name": "mileschou/twnicip",
+    "description": "Twnic IP",
     "type": "library",
     "license": "MIT",
-    "keywords": [
-        "template"
-    ],
     "authors": [
         {
             "name": "MilesChou",
@@ -14,17 +11,15 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1 | ^8"
     },
     "require-dev": {
-        "codedungeon/phpunit-result-printer": "^0.29.3",
-        "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^7.5 | ^8.5 | ^9.3",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
         "psr-4": {
-            "MilesChou\\Template\\": "src"
+            "MilesChou\\TwnicIp\\": "src"
         }
     },
     "autoload-dev": {
