--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": "^7.1 | ^8"
     },
     "require-dev": {
+        "phpbench/phpbench": "^0.16 | ^1.1",
         "phpunit/phpunit": "^7.5 | ^8.5 | ^9.3",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/console": "^4 | ^5",
