--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,12 +9,17 @@ on:
 jobs:
   linux_tests:
     runs-on: ubuntu-latest
-
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         php: [ 8.0, 7.4, 7.3, 7.2, 7.1 ]
         stability: [ prefer-lowest, prefer-stable ]
+        experimental: [ false ]
+        include:
+          - php: 8.1
+            stability: prefer-stable
+            experimental: true
 
     name: PHP ${{ matrix.php }} - ${{ matrix.stability }}
 
