--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "mileschou/ip": "^0.2.0"
     },
     "require-dev": {
+        "fakerphp/faker": "^1.20",
         "phpbench/phpbench": "^0.16 | ^1.1",
         "phpunit/phpunit": "^7.5 | ^8.5 | ^9.5",
         "squizlabs/php_codesniffer": "^3.6",
