--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,17 @@
         }
     ],
     "require": {
-        "php": "^7.1 | ^8.0",
+        "php": "^8.0",
         "mileschou/ip": "^0.2.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.20",
-        "phpbench/phpbench": "^0.16 | ^1.1",
-        "phpunit/phpunit": "^7.5 | ^8.5 | ^9.6",
-        "squizlabs/php_codesniffer": "^3.6",
-        "symfony/console": "^4 | ^5",
-        "symfony/css-selector": "^4 |^5",
-        "symfony/dom-crawler": "^4 | ^5"
+        "fakerphp/faker": "^1.23",
+        "phpbench/phpbench": "^1.2",
+        "phpunit/phpunit": "^9.6",
+        "squizlabs/php_codesniffer": "^3.7",
+        "symfony/console": "^6.0",
+        "symfony/css-selector": "^6.0",
+        "symfony/dom-crawler": "^6.0"
     },
     "autoload": {
         "psr-4": {
